--- a/css/estilo-a.css
+++ b/css/estilo-a.css
@@ -251,3 +251,23 @@ h4 {
         text-decoration: none;
     }
 }
+
+@media screen and (max-width:400px) {
+    #botonera2 {
+        color: white;
+        font-size: 15px;
+        font-style: italic;
+        float: left;
+        padding: 8px;
+        margin: 5px;
+        border-style: solid;
+        border-color: #16024e;
+        background-color: #6b066e;
+    }
+    #botonera2 li {
+        padding-bottom: 15px;
+    }
+    #botonera2 li a {
+        text-decoration: none;
+    }
+}
