--- a/css/estilo-a.css
+++ b/css/estilo-a.css
@@ -250,6 +250,9 @@ h4 {
     #botonera2 li a {
         text-decoration: none;
     }
+    .card-title {
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width:400px) {
