--- a/css/estilo-a.css
+++ b/css/estilo-a.css
@@ -274,3 +274,9 @@ h4 {
         text-decoration: none;
     }
 }
+
+@media screen and (max-width:1100px) {
+    .card-title {
+        font-size: 25px;
+    }
+}
